--- a/styles/architects.css
+++ b/styles/architects.css
@@ -45,14 +45,14 @@ main {
     margin: 0 auto;
 }
 
-main > section {
+main>section {
     margin-top: 130px;
 }
 
 .section-title {
     font-size: 2.8rem;
     font-weight: 700;
-} 
+}
 
 /* header styles */
 
@@ -120,16 +120,52 @@ main > section {
     font-weight: 500;
 }
 
+/* some facts related styles */
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card {
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.fact-number {
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-description {
+    max-width: 540px;
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar, 
-    .nav-links, 
+
+    .navbar,
+    .nav-links,
     .teams {
         flex-direction: column;
     }
+
     .team-img-container {
         grid-template-columns: repeat(1, 1fr);
     }
+
     .our-features {
         margin-left: 20px;
     }
@@ -140,6 +176,7 @@ main > section {
     .teams {
         flex-direction: column;
     }
+
     .our-features {
         margin-left: 50px auto;
     }
