made features secton responsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -156,6 +156,10 @@ main>section {
     font-weight: 700;
 }
 
+.featured-architect img{
+    width: 100%;
+}
+
 /* some facts related styles */
 .facts-container {
     display: grid;
@@ -209,6 +213,7 @@ main>section {
 
     .navbar,
     .nav-links,
+    .features,
     .teams {
         flex-direction: column;
     }
@@ -231,11 +236,15 @@ main>section {
     .our-features {
         margin-left: 20px;
     }
+    #experience-badge {
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams {
+    .teams, .features {
         flex-direction: column;
     }
 
@@ -246,5 +255,9 @@ main>section {
         grid-template-columns: repeat(2, 1fr);
         gap: 50px;
         justify-items: center;
+    }
+    #experience-badge {
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
